--- a/requirements.txt
+++ b/requirements.txt
@@ -140,3 +140,6 @@ pyttsx3==2.90
 # uvicorn==0.29.0
 # websockets==12.0
 # yarl==1.9.4
+# RAG Dependencies
+chromadb>=0.4.0
+sentence-transformers>=2.2.0
